[package]
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
categories = ["command-line-utilities"]
description = "Generates a BitBake recipe for a package utilizing meta-rust's classes."
documentation = "https://github.com/cardoe/cargo-bitbake"
homepage = "https://github.com/cardoe/cargo-bitbake"
keywords = ["cargo-subcommand", "bitbake", "yocto", "recipe"]
license = "MIT/Apache-2.0"
edition = "2021"
name = "cargo-bitbake"
readme = "README.md"
repository = "https://github.com/cardoe/cargo-bitbake"
version = "0.4.0-alpha.0"
rust-version = "1.75"

[badges]
is-it-maintained-issue-resolution = { repository = "cardoe/cargo-bitbake" }
is-it-maintained-open-issues = { repository = "cardoe/cargo-bitbake" }
maintenance = { status = "passively-maintained" }

[badges.travis-ci]
repository = "cardoe/cargo-bitbake"

[dependencies]
anyhow = { version = "1.0.79", default-features = false, features = ["std"] }
cargo = "0.84"
clap = { version = "4.0.28", default-features = false, features = ["color", "derive", "env", "error-context", "help", "string", "unicode", "usage", "std", "suggestions", "wrap_help"] }
git2 = { version = "0.19.0", default-features = false }
itertools = "0.14.0"
lazy_static = "^1"
md5 = "0.7.0"
regex = "^1"
